Changes done in all screens Except CompletedOrder Screen

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ div {
   background-color: #f5f5f5;
 }
 
+.bg-m {
+  background-color: #f5f5f5;
+}
+
 .bg-color {
   background-color: #fefefe;
 }
@@ -174,7 +178,7 @@ div {
 }
 
 .main-nav {
-  border-radius: 0px 40px 40px 0px;
+  border-radius: 0px 40px 0px 0px;
   background-color: #5469B1;
 }
 
@@ -266,10 +270,6 @@ div {
 
 .t-ts {
   font-size: 14px;
-}
-
-.bg-m {
-  background-color: #f5f5f5;
 }
 
 .ph-t::placeholder {
@@ -448,4 +448,8 @@ div {
 .input-new {
   box-shadow: 0px 4px 16px rgba(132,147,199,0.1450980392156863);
   border-radius: 10px;
+}
+
+.of-s {
+  overflow-x: scroll
 }
