truck and profile list, create

--- a/src/App.css
+++ b/src/App.css
@@ -457,3 +457,15 @@ div {
 .of-s {
   overflow-x: scroll
 }
+
+.select_option:hover{
+  background-color: #fff;
+}
+
+.loading_text{
+  font-size: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
